# phoenix

./: .gitignore  LICENSE  README.md  cli.py  export.py  gradient_check.py  grid.py  live.py  ptypes.py  pyproject.toml  scene.py  visualizer.py
presets/python/: __init__.py  bridge.py  cantilever.py  drone_frame.py  lbracket.py  mbb_2d.py  michell_truss.py
settings/: convection.json  drone.json  gravity.json  stress.json  structural.json  thermal.json  vibration.json
solver/: __init__.py  _stress_utils.py  base.py  convection.py  eigen.py  gravity.py  maxlength.py  multi.py  settings.py  stress.py  structural.py  thermal.py  verify.py  vibration.py
