[project]
name = "phoenix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pyamg>=5.3.0",
    "pypardiso>=0.4.7",
    "pyvista>=0.48.4",
    "scipy>=1.17.1",
    "setuptools<67",
    "vpython>=7.6.5",
]
